--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,6 @@
 [submodule "pddlboat/submodules/symk"]
 	path = pddlboat/submodules/symk
 	url = https://github.com/wbthomason/symk.git
-[submodule "FOND4LTLf"]
+[submodule "competitors/FOND4LTLf"]
 	path = FOND4LTLf
 	url = https://github.com/whitemech/FOND4LTLf.git
