--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "pddlboat/submodules/symk"]
 	path = pddlboat/submodules/symk
 	url = https://github.com/wbthomason/symk.git
+[submodule "competitors/FOND4LTLf"]
+	path = competitors/FOND4LTLf
+	url = https://github.com/whitemech/FOND4LTLf.git
